<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calendar_day_default"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvViewStatic"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_static"
            android:textColor="@color/tab_title_selected"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tvFollower"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_title_selector"
            android:gravity="center"
            android:text="@string/title_flower"
            android:textColor="@color/dark_white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_title_selector"
            android:gravity="center"
            android:text="@string/title_flowing"
            android:textColor="@color/dark_white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvUpload"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_title_selector"
            android:gravity="center"
            android:text="@string/title_upload"
            android:textColor="@color/dark_white"
            android:textSize="16dp" />
    </LinearLayout>

    <com.example.vinhhuynhlb.androidcalendarviews.view.StaticView
        android:id="@+id/staticView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />
</LinearLayout>
